--- a/pom.xml
+++ b/pom.xml
@@ -36,15 +36,15 @@
 	</dependencyManagement>
 	<build>
 		<plugins>
-      		<plugin>
-        		<groupId>org.apache.maven.plugins</groupId>
-        		<artifactId>maven-compiler-plugin</artifactId>
-        		<configuration>
-          			<source>1.8</source>
-          			<target>1.8</target>
-        		</configuration>
-      		</plugin>
-    	</plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -55,4 +55,7 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<modules>
+		<module>twitter-to-kafka-service</module>
+	</modules>
 </project>
